--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800 & display=swap & subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">   
 </head>
 <body>
-    <div>
+    <div class="page-header">
         <div>
                 <a href=""></a>
-                <ul>
+                <ul class="nav">
                     <li>Home</li>
                     <li>Features</li>
                     <li>Video</li>
                     <li>Screens</li>
                     <li>Screens</li>
                     <li>Team</li>
-                    <li> <a href="">Free Trail</a></li>
+                    <li> <a href="" class="btn-free">Free Trail</a></li>
                     
                 </ul>
             </div>
